--- a/src/components/background/styles/index.css
+++ b/src/components/background/styles/index.css
@@ -28,3 +28,15 @@
     background-size: 8px 8px, 8px 8px;
     box-shadow: 0px 10px 36px rgba(0, 20, 105, 0.08);
 }
+
+.background-dots-plus {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+
+    background-image: radial-gradient(var(--color-fill-3) 1px, rgba(0, 0, 0, 0) 1px);
+    background-size: 16px 16px;
+}
