--- a/src/components/header/styles/index.css
+++ b/src/components/header/styles/index.css
@@ -2,6 +2,7 @@
     position: sticky;
     top: 0;
     left: 0;
+    width: 100%;
     z-index: 10;
-    box-shadow: 0px 8px 8px rgba(204, 204, 204, 0.2);
+    /*box-shadow: 0px 8px 8px rgba(204, 204, 204, 0.2);*/
 }
