--- a/src/components/header/styles/index.css
+++ b/src/components/header/styles/index.css
@@ -4,5 +4,9 @@
     left: 0;
     width: 100%;
     z-index: 10;
-    /*box-shadow: 0px 8px 8px rgba(204, 204, 204, 0.2);*/
+}
+
+.header-row-container {
+    width: 100%;
+    margin: -14px 0 -14px 0 !important;
 }
