--- a/src/components/imageCard/styles/index.css
+++ b/src/components/imageCard/styles/index.css
@@ -1,11 +1,14 @@
 .image-container {
     position: relative;
-    width: 100%;
+    /*width: 100%;*/
+    border-radius: 4px;
+    height: 100%;
+    overflow: hidden;
 }
 
 .image-box {
     width: 100%;
-    height: 100%;
+    border-radius: 4px 4px 4px 4px !important;
 }
 
 .image-box.fit-cover {
@@ -20,7 +23,7 @@
 
     margin: -12px;
     padding: 12px;
-    border-radius: 0 0 4px 4px;
+    border-radius: 4px;
     background: linear-gradient(
             to top,
             rgba(0, 0, 0, 0.2),
