--- a/src/components/imageCard/styles/index.css
+++ b/src/components/imageCard/styles/index.css
@@ -2,6 +2,7 @@
     position: relative;
     /*width: 100%;*/
     border-radius: 4px;
+    min-height: 141px;
     height: 100%;
     overflow: hidden;
 }
