fix: 右上角头像下拉重复渲染

--- a/src/components/header/styles/index.css
+++ b/src/components/header/styles/index.css
@@ -10,3 +10,9 @@
     width: 100%;
     margin: -14px 0 -14px 0 !important;
 }
+
+.user-dropdown-menu {
+    position: relative;
+    display: block;
+    width: 250px;
+}
